# http-client

./: .gitignore  .gitlab-ci.yml  .project-settings.yml  .travis.yml  Create.hs  CreateTest.hs  Http.hs  LICENSE  OpenFileTest.hs  README.md  TUTORIAL.md  Warp.hs  appveyor.yml  cabal.project  http-client-lens.cabal  http-client.cabal  http-conduit.cabal  http-enumerator.cabal  http.hs  integration-test.hs  keepalive.hs  publicsuffixlist.cabal  runtests.hs  sources.txt  stack-network3.yaml  stack-nightly.yaml  stack.yaml  test-server.hs  test.hs
.azure/: azure-linux-template.yml  azure-osx-template.yml  azure-windows-template.yml
.github/workflows/: tests.yml
Create/: Create.hs  publicsuffixlistcreate.cabal
Create/Network/PublicSuffixList/: Create.hs
Create/Test/: PublicSuffixListCreate.hs
Lookup/: Create.hs  publicsuffixlist.cabal
Lookup/Network/PublicSuffixList/: Create.hs  DataStructure.hs
Lookup/Network/PublicSuffixList/Internal/: Types.hs
Network/HTTP/: Conduit.hs  Enumerator.hs
Network/HTTP/Conduit/: Browser.hs  Chunk.hs  ConnInfo.hs  Cookies.hs  Internal.hs  Manager.hs  MultipartFormData.hs  Parser.hs  Request.hs  Response.hs  Types.hs  Util.hs
Network/HTTP/Conduit/Cookies/: Internal.hs
Network/HTTP/Enumerator/: HttpParser.hs  Zlib.hs
Network/PublicSuffixList/: Create.hs  DataStructure.hs  Lookup.hs  Serialize.hs  Types.hs
Network/PublicSuffixList/Internal/: Internal.hs
Network/TLS/: Client.hs  Packet.hs
Network/TLS/Client/: Enumerator.hs
Test/: PublicSuffixList.hs
attic/: sanity.hs
c/: helper.c
http-client/: ChangeLog.md  README.md  http-client.cabal
http-client-conduit/: http-client-conduit.cabal
http-client-conduit/Network/HTTP/Client/: Conduit.hs
http-client-multipart/: http-client-multipart.cabal
http-client-multipart/Network/HTTP/Client/: MultipartFormData.hs
http-client-openssl/: ChangeLog.md  README.md  http-client-openssl.cabal
http-client-openssl/Network/HTTP/Client/: OpenSSL.hs
http-client-openssl/test/: Spec.hs
http-client-tls/: ChangeLog.md  README.md  http-client-tls.cabal
http-client-tls/Network/HTTP/Client/: TLS.hs
http-client-tls/bench/: Bench.hs
http-client-tls/test/: Spec.hs
http-client/Data/: KeyedPool.hs
http-client/Network/HTTP/: Client.hs  Proxy.hs
http-client/Network/HTTP/Client/: Body.hs  Connection.hs  Cookies.hs  Core.hs  Headers.hs  Internal.hs  Lens.hs  Manager.hs  MultipartFormData.hs  Request.hs  Response.hs  Socket.hs  Types.hs  Util.hs
http-client/bench/: gh-306.hs  threaded-stress.hs
http-client/publicsuffixlist/: Create.hs  CreateTest.hs  publicsuffixlist.cabal
http-client/publicsuffixlist/Network/PublicSuffixList/: Create.hs  DataStructure.hs  Serialize.hs  Types.hs
http-client/src/Network/HTTP/Client/: Body.hs  Connection.hs  Cookies.hs  Headers.hs  Manager.hs  Types.hs
http-client/test/: Spec.hs
http-client/test-nonet/Network/HTTP/: ClientSpec.hs
http-client/test-nonet/Network/HTTP/Client/: BodySpec.hs  ConnectionSpec.hs  CookieSpec.hs  HeadersSpec.hs  RequestBodySpec.hs  RequestSpec.hs  ResponseSpec.hs
http-client/test/Network/HTTP/: ClientSpec.hs
http-client/test/Network/HTTP/Client/: BodySpec.hs  HeadersSpec.hs  RequestBodySpec.hs  RequestSpec.hs  ResponseSpec.hs
http-conduit/: .ghci  ChangeLog.md  README  README.md  http-conduit.cabal  test.hs
http-conduit/Network/HTTP/: Conduit.hs  Simple.hs
http-conduit/Network/HTTP/Client/: Conduit.hs
http-conduit/test/: CookieTest.hs  main.hs
src/: Spec.hs
src/Network/HTTP/: Client.hs
src/Network/HTTP/Client/: Body.hs  Connection.hs  Cookies.hs  Headers.hs  Lens.hs  Manager.hs  Request.hs  RequestParser.hs  Response.hs  ResponseBody.hs  ResponseParser.hs  Types.hs  Util.hs
test/: CookieTest.hs  cookiemain.hs  main.hs
test/Network/HTTP/: ClientSpec.hs
test/Network/HTTP/Client/: BodySpec.hs  RequestParserSpec.hs  ResponseBodySpec.hs  ResponseParserSpec.hs
