name:          http-client-lens
category:      Lens
version:       0.1.0
license:       BSD3
cabal-version: >= 1.6
license-file:  LICENSE
author:        Rein Henrichs
maintainer:    Rein Henrichs <reinh@gmail.com>
stability:     provisional
homepage:      http://github.com/reinh/http-client-lens
bug-reports:   http://github.com/reinh/http-client-lens/issues
copyright:     Copyright (C) 2014 Rein Henrichs
synopsis:      Lenses for http-client
description:   Lenses for http-client
build-type:    Simple

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  CHANGELOG.markdown

library
  build-depends:
    base          == 4.*,
    bytestring    == 0.10.*,
    http-client   == 0.3.*,
    http-types    == 0.8.*,
    lens          == 4.*,
    network       == 2.4.*

  exposed-modules:
    Network.HTTP.Client.Lens

  hs-source-dirs: src
  ghc-options: -Wall

