name:            http-conduit
version:         1.8.7.1
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        HTTP client package with conduit interface and HTTPS support.
description:
    This package uses attoparsec for parsing the actual contents of the HTTP connection. It also provides higher-level functions which allow you to avoid direct usage of conduits. See <http://www.yesodweb.com/book/http-conduit> for more information.
    .
    "Network.HTTP.Conduit.Browser" module has been moved to <http://hackage.haskell.org/package/http-conduit-browser/>
category:        Web, Conduit
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/book/http-conduit
extra-source-files: test/main.hs
                  , test/CookieTest.hs
                  , multipart-example.bin
                  , nyan.gif

flag network-bytestring
  default: False

library
    build-depends: base                  >= 4       && < 5
                 , bytestring            >= 0.9.1.4
                 , transformers          >= 0.2
                 , failure               >= 0.1
                 , resourcet             >= 0.3     && < 0.5
                 , conduit               >= 0.5.5   && < 1.1
                 , zlib-conduit          >= 0.5     && < 1.1
                 , blaze-builder-conduit >= 0.5
                 , attoparsec-conduit    >= 0.5
                 , attoparsec            >= 0.8.0.2
                 , utf8-string           >= 0.3.4
                 , blaze-builder         >= 0.2.1
                 , http-types            >= 0.7
                 , mime-types            >= 0.1
                 , cprng-aes             >= 0.2
                 , tls                   >= 1.0.0
                 , tls-extra             >= 0.5.0
                 , monad-control         >= 0.3
                 , containers            >= 0.2
                 , certificate           >= 1.3
                 , case-insensitive      >= 0.2
                 , base64-bytestring     >= 0.1
                 , asn1-data             >= 0.5.1
                 , data-default
                 , text
                 , transformers-base     >= 0.4
                 , lifted-base           >= 0.1
                 , socks                 >= 0.4
                 , time
                 , cookie                >= 0.4
                 , void                  >= 0.5.5
                 , regex-compat
                 , mtl
                 , deepseq
                 , array                 >= 0.3
                 , random
                 , filepath
    if flag(network-bytestring)
        build-depends: network               >= 2.2.1   && < 2.2.3
                     , network-bytestring    >= 0.1.3   && < 0.1.4
    else
        build-depends: network               >= 2.3
    exposed-modules: Network.HTTP.Conduit
                     Network.HTTP.Conduit.Internal
                     Network.HTTP.Conduit.MultipartFormData
    other-modules:   Network.HTTP.Conduit.Parser
                     Network.HTTP.Conduit.ConnInfo
                     Network.HTTP.Conduit.Request
                     Network.HTTP.Conduit.Util
                     Network.HTTP.Conduit.Manager
                     Network.HTTP.Conduit.Chunk
                     Network.HTTP.Conduit.Response
                     Network.HTTP.Conduit.Cookies
                     Network.HTTP.Conduit.Types
    ghc-options:     -Wall

test-suite test
    main-is: test/main.hs
    type: exitcode-stdio-1.0
    hs-source-dirs: ., test

    ghc-options:   -Wall
    cpp-options:   -DDEBUG
    build-depends: base >= 4 && < 5
                 , HUnit
                 , hspec >= 1.3
                 , bytestring
                 , transformers
                 , failure
                 , conduit
                 , zlib-conduit
                 , blaze-builder-conduit
                 , attoparsec-conduit
                 , attoparsec
                 , utf8-string
                 , blaze-builder
                 , http-types
                 , cprng-aes
                 , tls
                 , tls-extra
                 , monad-control
                 , containers
                 , certificate
                 , case-insensitive
                 , base64-bytestring
                 , asn1-data
                 , data-default
                 , text
                 , transformers-base
                 , lifted-base
                 , time
                 , network
                 , wai
                 , warp >= 1.3.6
                 , socks
                 , http-types
                 , cookie
                 , regex-compat
                 , network-conduit >= 0.6
                 , resourcet
                 , void
                 , deepseq
                 , mtl
                 , array
                 , random
                 , filepath
                 , mime-types

source-repository head
  type:     git
  location: git://github.com/snoyberg/http-conduit.git
