name:            http-conduit
version:         2.0.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        HTTP client package with conduit interface and HTTPS support.
description:
    This package uses conduit for parsing the actual contents of the HTTP connection. It also provides higher-level functions which allow you to avoid directly dealing with streaming data. See <http://www.yesodweb.com/book/http-conduit> for more information.
    .
    The @Network.HTTP.Conduit.Browser@ module has been moved to <http://hackage.haskell.org/package/http-conduit-browser/>
category:        Web, Conduit
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/book/http-conduit
extra-source-files: test/main.hs
                  , test/CookieTest.hs
                  , multipart-example.bin
                  , nyan.gif
                  , certificate.pem
                  , key.pem

flag network-bytestring
  default: False

flag tls_1_1_3
    default: True

library
    build-depends: base                  >= 4       && < 5
                 , bytestring            >= 0.9.1.4
                 , transformers          >= 0.2
                 , failure               >= 0.1
                 , resourcet             >= 0.3     && < 0.5
                 , conduit               >= 0.5.5   && < 1.1
                 , zlib-conduit          >= 0.5     && < 1.1
                 , blaze-builder-conduit >= 0.5
                 , utf8-string           >= 0.3.4
                 , blaze-builder         >= 0.2.1
                 , http-types            >= 0.7
                 , mime-types            >= 0.1
                 , cprng-aes             >= 0.3
                 , tls                   >= 1.1.0
                 , tls-extra             >= 0.5.0
                 , monad-control         >= 0.3
                 , containers            >= 0.2
                 , certificate           >= 1.3
                 , case-insensitive      >= 0.2
                 , base64-bytestring     >= 0.1
                 , asn1-data             >= 0.5.1
                 , data-default
                 , text
                 , transformers-base     >= 0.4
                 , lifted-base           >= 0.1
                 , socks                 >= 0.4
                 , time
                 , cookie                >= 0.4
                 , void                  >= 0.5.5
                 , regex-compat
                 , mtl
                 , deepseq
                 , publicsuffixlist      >= 0.0.3   && < 1.0
                 , array                 >= 0.3
                 , random
                 , filepath
                 , http-client
                 , connection
    if flag(network-bytestring)
        build-depends: network               >= 2.2.1   && < 2.2.3
                     , network-bytestring    >= 0.1.3   && < 0.1.4
    else
        build-depends: network               >= 2.3
    if flag(tls_1_1_3)
      build-depends: tls >= 1.1.3
                   , cprng-aes >= 0.5.0
    else
      build-depends: tls < 1.1.3
                   , cprng-aes < 0.5.0
    exposed-modules: Network.HTTP.Conduit
                     Network.HTTP.Conduit.MultipartFormData
    other-modules:   Network.HTTP.Conduit.Util
                     Network.HTTP.Conduit.Chunk
    ghc-options:     -Wall

test-suite test
    main-is: test/main.hs
    type: exitcode-stdio-1.0
    hs-source-dirs: ., test

    ghc-options:   -Wall
    cpp-options:   -DDEBUG
    build-depends: base >= 4 && < 5
                 , HUnit
                 , hspec >= 1.3
                 , bytestring
                 , transformers
                 , failure
                 , conduit
                 , zlib-conduit
                 , blaze-builder-conduit
                 , utf8-string
                 , blaze-builder
                 , http-types
                 , cprng-aes
                 , tls
                 , tls-extra
                 , monad-control
                 , containers
                 , certificate
                 , case-insensitive
                 , base64-bytestring
                 , asn1-data
                 , data-default
                 , text
                 , transformers-base
                 , lifted-base
                 , time
                 , network
                 , wai < 2.0
                 , warp >= 1.3.6 && < 2.0
                 , warp-tls
                 , socks
                 , http-types
                 , cookie
                 , regex-compat
                 , network-conduit >= 0.6
                 , resourcet
                 , void
                 , deepseq
                 , mtl
                 , publicsuffixlist
                 , array
                 , random
                 , filepath
                 , mime-types
                 , http-client
                 , connection

source-repository head
  type:     git
  location: git://github.com/snoyberg/http-conduit.git
