name:            http-enumerator
version:         0.2.0.5
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        HTTP client package with enumerator interface and HTTPS support.
description:
    This package uses attoparsec for parsing the actual contents of the HTTP connection. The only gotcha is the withHttpEnumerator function, otherwise should do exactly what you expect.
category:        Web, Enumerator
stability:       Experimental
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://github.com/snoyberg/http-enumerator

flag openssl
  description: Build using the HSOpenSSL library.
  default: False
flag test
  description: Build the test executable.
  default: False

library
    build-depends: base                  >= 4       && < 5
                 , bytestring            >= 0.9.1.4 && < 0.10
                 , transformers          >= 0.2     && < 0.3
                 , failure               >= 0.1     && < 0.2
                 , enumerator            >= 0.4.1   && < 0.5
                 , network               >= 2.2.1   && < 2.3
                 , network-bytestring    >= 0.1.3   && < 0.2
                 , attoparsec            >= 0.8.0.2 && < 0.9
                 , attoparsec-enumerator >= 0.2     && < 0.3
                 , utf8-string           >= 0.3.4   && < 0.4
                 , blaze-builder         >= 0.2     && < 0.3
                 , zlib-bindings         >= 0.0.0   && < 0.1
    if flag(openssl)
        build-depends: HsOpenSSL         >= 0.8     && < 0.9
        cpp-options:   -DOPENSSL
    else
        build-depends: tls               >= 0.2     && < 0.3
                     , mtl               >= 1.1     && < 1.2
    exposed-modules: Network.HTTP.Enumerator
    other-modules:   Network.HTTP.Enumerator.HttpParser
                     Network.HTTP.Enumerator.Zlib
    if ! flag(openssl)
        other-modules: Network.TLS.Client.Enumerator
    ghc-options:     -Wall

executable http-enumerator
    main-is: test.hs
    if flag(test)
        Buildable: True
    else
        Buildable: False

source-repository head
  type:     git
  location: git://github.com/snoyberg/http-enumerator.git
