name:            http-enumerator
version:         0.4.1
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        HTTP client package with enumerator interface and HTTPS support.
description:
    This package uses attoparsec for parsing the actual contents of the HTTP connection. The only gotcha is the withHttpEnumerator function, otherwise should do exactly what you expect.
category:        Web, Enumerator
stability:       Experimental
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://github.com/snoyberg/http-enumerator

flag test
  description: Build the test executable.
  default: False
flag network-bytestring

library
    build-depends: base                  >= 4       && < 5
                 , bytestring            >= 0.9.1.4 && < 0.10
                 , transformers          >= 0.2     && < 0.3
                 , failure               >= 0.1     && < 0.2
                 , enumerator            >= 0.4.7   && < 0.5
                 , attoparsec            >= 0.8.0.2 && < 0.9
                 , attoparsec-enumerator >= 0.2     && < 0.3
                 , utf8-string           >= 0.3.4   && < 0.4
                 , blaze-builder         >= 0.2.1   && < 0.3
                 , zlib-bindings         >= 0.0     && < 0.1
                 , zlib-enum             >= 0.1     && < 0.2
                 , http-types            >= 0.5     && < 0.6
                 , blaze-builder-enumerator >= 0.2  && < 0.3
                 , tls                   >= 0.4     && < 0.5
                 , monad-control         >= 0.2     && < 0.3
                 , containers            >= 0.2     && < 0.5
                 , certificate           >= 0.7     && < 0.8
                 , case-insensitive      >= 0.2     && < 0.3
                 , ascii                 >= 0.0.2   && < 0.2
    if flag(network-bytestring)
        build-depends: network               >= 2.2.1   && < 2.2.3
                     , network-bytestring    >= 0.1.3   && < 0.1.4
    else
        build-depends: network               >= 2.3     && < 2.4
    exposed-modules: Network.HTTP.Enumerator
    other-modules:   Network.HTTP.Enumerator.HttpParser
                     Network.TLS.Client.Enumerator
    ghc-options:     -Wall

executable http-enumerator
    main-is: test.hs
    if flag(test)
        Buildable: True
    else
        Buildable: False

source-repository head
  type:     git
  location: git://github.com/snoyberg/http-enumerator.git
