name:            publicsuffixlistcreate
version:         0.0.2
license:         BSD3
license-file:    LICENSE
author:          Myles C. Maxfield <myles.maxfield@gmail.com>
maintainer:      Myles C. Maxfield <myles.maxfield@gmail.com>
synopsis:        Create the publicsuffixlist package
description:     Create the publicsuffixlist package. This is broken out into its own package so users of the publicsuffixlist package don't have to depend on ICU.
category:        Network
stability:       Experimental
cabal-version:   >= 1.8
build-type:      Simple
homepage:        https://github.com/litherum/publicsuffixlist

library
    build-depends: base             >= 4     && < 5
                 , containers
                 , data-default
                 , bytestring       >= 0.9
                 , idna             >= 0.1.2 && < 1.0
                 , text             >= 0.11
                 , conduit          >= 0.5.0 && < 0.6.0
                 , publicsuffixlist >= 0.0.2 && < 0.1.0
    exposed-modules: Network.PublicSuffixList.Create
    ghc-options:     -Wall

Test-Suite test-public-suffix-list-create
    type: exitcode-stdio-1.0
    main-is: Test/PublicSuffixListCreate.hs
    build-depends: base             >= 4 && < 5
                 , publicsuffixlist >= 0.0.3 && < 0.1.0
                 , HUnit
                 , cereal

source-repository head
  type:     git
  location: git://github.com/litherum/publicsuffixlist.git
