name:                http-client-conduit
version:             0.1.0.0
synopsis:            Frontend support for using http-client with conduit
description:         Intended for use by higher-level libraries, such as http-conduit.
homepage:            https://github.com/snoyberg/http-client
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.HTTP.Client.Conduit
  build-depends:       base >= 4 && < 5
                     , http-client
                     , conduit
                     , resourcet
                     , bytestring
                     , transformers
  default-language:    Haskell2010
