name:                http-client-multipart
version:             0.1.0.0
synopsis:            Generate multipart uploads for http-client.
homepage:            https://github.com/snoyberg/http-client
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.HTTP.Client.MultipartFormData
  build-depends:       base >= 4 && < 5
                     , http-client
                     , bytestring
                     , array
                     , random
                     , filepath
                     , transformers
                     , text
                     , blaze-builder
                     , http-types
                     , mime-types
  default-language:    Haskell2010
