name:                http-client-openssl
version:             0.3.1.0
synopsis:            http-client backend using the OpenSSL library.
description:         Hackage documentation generation is not reliable. For up to date documentation, please see: <http://www.stackage.org/package/http-client>.
homepage:            https://github.com/snoyberg/http-client
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com alexbiehl@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md ChangeLog.md

flag test-proxy
   description: Test with http-proxy
   default: False

library
  exposed-modules:     Network.HTTP.Client.OpenSSL
  other-extensions:    ScopedTypeVariables
  build-depends:       base >= 4.10 && < 5
                     , bytestring
                     , http-client >= 0.2
                     , network
                     , HsOpenSSL >= 0.11.2.0
  default-language:    Haskell2010

test-suite spec
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded
  if flag(test-proxy)
    cpp-options: -DUSE_PROXY
  build-depends:       base
                     , hspec
                     , http-client >= 0.4.30
                     , http-client-openssl
                     , http-types
                     , HsOpenSSL
