name:                http-client-tls
version:             0.1.0.0
synopsis:            http-client backend using the connection package and tls library
description:         Intended for use by higher-level libraries, such as http-conduit.
homepage:            https://github.com/snoyberg/http-client
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.HTTP.Client.TLS
  other-extensions:    ScopedTypeVariables
  build-depends:       base >= 4 && < 5
                     , data-default
                     , http-client
                     , connection >= 0.1.3
                     , network
                     , tls >=1.1
  default-language:    Haskell2010

test-suite spec
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base
                     , hspec
                     , http-client
                     , http-client-tls
                     , http-types
