name:                http-client-tls
version:             0.2.4
synopsis:            http-client backend using the connection package and tls library
description:         Hackage documentation generation is not reliable. For up to date documentation, please see: <http://www.stackage.org/package/http-client>.
homepage:            https://github.com/snoyberg/http-client
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     ChangeLog.md

library
  exposed-modules:     Network.HTTP.Client.TLS
  other-extensions:    ScopedTypeVariables
  build-depends:       base >= 4 && < 5
                     , data-default-class
                     , http-client >= 0.3.5
                     , connection >= 0.2.2
                     , network
                     , tls >= 1.2
                     , bytestring
  default-language:    Haskell2010

test-suite spec
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base
                     , hspec
                     , http-client
                     , http-client-tls
                     , http-types
